# Embedded-Linux

./: 8 - Bitcoin Rate Requester.py
01 - Python/03 - Accessing Environment Variables/: Accessing Environment Variables.py
01 - Python/13 - Count Lines in a Txt File/: lineCounter.py
01 - Python/15 - Writing a List Into a Txt File/: text.txt
01 - Python/16 - GPIO Init Generator/: GPIO_Generate.py  init.txt
01 - Python/18 - Header Files parser/: Data_Frame.xlsx
01 - Python/21 - Simple Calculator GUI/: app.py
01 - Python/22 - Switch LED GUI/: app.py
01 - Python/23 - Factorial Calculator GUI/: app.py
02 - C++/01 - ASCII Code Table/: app.cpp
02 - C++/02 - Max Number Between Three Values/: app.cpp
02 - C++/03 - Right Angled Triangle Checking/: app.cpp
02 - C++/04 - Vowel Letter Checking/: app.cpp
02 - C++/05 - Printing Multiplication Table/: app.cpp
02 - C++/06 - Sum of Integer Digits/: app.cpp
02 - C++/07 - Decimal To Binary & Vice Versa/: app.cpp
02 - C++/08 - Find Maximum Number of an Array/: app.cpp
02 - C++/09 - Searching for a Number in Array/: app.cpp
02 - C++/10 - Deleting a Number in an Array/: app.cpp
02 - C++/11 - Merging Two Arrays/: app.cpp
02 - C++/12 - Even and Odd Numbers Finder/: app.cpp
02 - C++/13 - Squaring a given number/: app.cpp
02 - C++/14 - Using Lambda Expression to Sort/: app.cpp
02 - C++/15 - Phonebook Database/: app.cpp
02 - C++/16 - Check if a character is a digit/: app.cpp
02 - C++/17 - Check if an array is even/: app.cpp
02 - C++/18 - Check if any Element is Even/: app.cpp
02 - C++/19 - String Class/: app.cpp
02 - C++/20 - Interrupt Signal Handling/: app.cpp
02 - C++/21 - Filling an Array with a Range/: app.cpp
02 - C++/22 - Summing an Array Elements/: app.cpp
02 - C++/23 - Backtracer Class/: app.cpp
02 - C++/24 - Socket Programming/: Server.cpp  client  client.cpp  server
02 - C++/25 - String Class 2/: app.cpp
02 - C++/26 - Inheretance/: app.cpp
03 - Linux/01 - Simple Bash/: a.out  shell.cpp
03 - Linux/02 - Shared Library/: CMakeLists.txt  main.cpp
03 - Linux/02 - Shared Library/lib/: CMakeLists.txt  print.cpp  print.hpp
03 - Linux/03 - Regex Email - Number Py/: app.py
03 - Linux/04 - Regex Branch Name Cpp/: a.out  main  main.cpp
03 - Linux/05 - Regex Address Py/: app.py
03 - Linux/06 - Parsing Arguments/: a.out  main.cpp
04 - Cmake/01 - Hello World/: CMakeLists.txt  Makefile  main.cpp
04 - Cmake/02 - CMake Includes/: CMakeLists.txt  main.cpp
04 - Cmake/03 - Adding Libraries/: CMakeLists.txt  main.cpp
04 - Cmake/03 - Adding Libraries/lib/: CMakeLists.txt
04 - Cmake/04 - Variables/: CMakeLists.txt  main.cpp
04 - Cmake/05 - If , Foreach and while/: CMakeLists.txt
04 - Cmake/05 - If , Foreach and while/lib/: wifi.cpp
04 - Cmake/06 - Function & Caching/: CMakeLists.txt  config.h.in
04 - Cmake/06 - Function & Caching/lib/: CMakeLists.txt  wifi.hpp
04 - Cmake/07 - Compile & Install/: CMakeLists.txt  config.h.in  main.cpp
05 - Bash/: 01 - Hello World.sh  02 - dmenu.sh  03 - Switch-Select.sh  04 - Translate.sh  05 - Strings.sh  06 - functions.sh  07 - Signal Handler.sh  08 - Arrays.sh  09 - coloring output.sh  10 - getopts.sh
Python/: 10 - Activities Advisor.py  12 - Vscode Extensions Auto Installer.py  17 - Command Line Arguments.py  19 - Buttons on Grid GUI.py  20 - Reverse a String GUI.py  7 - Largest Item in a List.py  8 - Bitcoin Rate Requester.py  Task 1.py  Task 4.py  Task 5.py  Task 6.py
Python/02 - Vowel Letters Check/: Vowels Checker.py
Python/11 - Geo Location Finder/: app.py
Python/14 - Count Words in a Txt File/: wordCounter.py
Python/15 - Writing a List Into a Txt File/: tempCodeRunnerFile.py  writeFile.py
Python/18 - Header Files parser/: Parser.py
Python/22 - Gauge Drawing GUI/: app.py
Python/9 - FireLink/: Fav_Sites.txt  FireLink.py  FireLinkModule.py
